# ZeroTrustEngine

./: .env  CMakeLists.txt
include/: risk_engine.h  scoring.h
migrations/: env.py
migrations/versions/: 0001_core_tables.py  0002_append_only.py  0003_indexes.py  0004_hmac_verification.py  0005_ml_model_trigger.py
ml_pipeline/: drift_detector.py  format_spec.md  generate_dataset.py  retrain.py  serialize_model.py  train_model.py  validate_model.py
ml_pipeline/data/: attack_samples.csv  login_events.csv  normal_samples.csv
ml_pipeline/models/: isolation_forest.joblib  metrics.json  model.isof  reference_scores.npy
ml_pipeline/notebooks/: analysis.ipynb
models/: __init__.py  all_models.py
scripts/: behavioral_log_query.sql  redis_keys.md  verify_hmac.py
src/: profile.c  profile.h  risk_engine.c  scoring.c  scoring.h  security.c  session.c  session.h
tests/: main.c  test_schema.py
